Ensure levels are always on legible coloring

--- a/present/static/character-round.css
+++ b/present/static/character-round.css
@@ -48,7 +48,8 @@ img#character-image {
   font-size: 32px;
   color: black;
   vertical-align: bottom;
-  margin: 0 auto;
+  border-radius: 15px;
+  background: linear-gradient(to right, rgba(255,255,255,0) 30%, rgba(255,255,255,0.9) 50%);
 }
 
 #character-level-container img {
